remove AI-Button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 id="score">0</h1>
     </div>
     <h1 id="high-score">High Score: 0</h1>
-    <button type="button" id="ai-button" state="off">AI Player: off</button>
+    <!-- <button type="button" id="ai-button" state="off">AI Player: off</button> -->
   </body>
 
   <!-- Scripts -->
