added grunt and grunt babel for dumb safari

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <script src="./lib/two.min.js" charset="utf-8"></script>
   <script src="./lib/jquery-2.2.0.min.js" charset="utf-8"></script>
     <!-- actual stuff -->
-  <script src="./js/num.js" charset="utf-8"></script>
-  <script src="./js/keybindings.js" charset="utf-8"></script>
-  <script src="./js/main.js" charset="utf-8"></script>
+  <script src="./dist/num.js" charset="utf-8"></script>
+  <script src="./dist/keybindings.js" charset="utf-8"></script>
+  <script src="./dist/main.js" charset="utf-8"></script>
 
 </html>
