--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
       <h1 id="instructions"></h1>
     </div>
     <button type="button" id="ai-button" state="off">AI Player: off</button>
+    <div id="scores-list-container" class="invisible">
+      <div class="table-header">
+        High Scores
+      </div>
+      <div class="table-container">
+        <table id="high-score-table">
+          <tbody>
+            <tr></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </body>
 
   <!-- Scripts -->
@@ -23,7 +35,7 @@
   <script src="./lib/jquery-2.2.0.min.js" charset="utf-8"></script>
     <!-- actual stuff -->
   <script src="./dist/num.js" charset="utf-8"></script>
+  <script src="./dist/db.js" charset="utf-8"></script>
   <script src="./dist/keybindings.js" charset="utf-8"></script>
   <script src="./dist/main.js" charset="utf-8"></script>
-
 </html>
